# hive

./: .gitignore  README.md  SPIKE_NOTES.md  index.html  package-lock.json  package.json
.claude/: launch.json
docs/: ADR-001-render-vs-embed.md  ARCHITECTURE.md  BLOCK_INVENTORY.md  CLAUDE_CODE_PROMPT.md  DB_SPEC.md  DEMO.md  DEMO_POLISH.md  EDITOR_PARITY.md  NOTION_CONTEXT.md  POLISH_OPPORTUNITIES.md  POLISH_ROUND3.md  PRD.md  PROJECT_PLAN.md  QA_FINDINGS.md  WHY_HIVE.md
oauth-bounce/: index.html
scripts/: release.sh  signing.env.example
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BacklinksSection.tsx  BlockRenderer.tsx  CaptureModal.tsx  CommandBar.tsx  CommentsPanel.tsx  DatabaseView.tsx  DiffBanner.tsx  DigestPanel.tsx  EditableText.tsx  EmojiPicker.tsx  FallbackCard.tsx  Header.tsx  HomeScreen.tsx  InboxPanel.tsx  MentionInput.tsx  MovePageModal.tsx  MruSwitcher.tsx  OutlineRail.tsx  PageMenu.tsx  PeekLayer.tsx  PropertiesHeader.tsx  RichText.tsx  SettingsModal.tsx  ShortcutSheet.tsx  Sidebar.tsx  SpaceBar.tsx  SpaceSwitcher.tsx  SplitPane.tsx  Toast.tsx
src/lib/: atc.ts  attention.ts  backlinks.ts  blockDiff.ts  breadcrumbs.ts  childPages.ts  commentDraft.ts  commentSeen.ts  config.ts  databaseApi.ts  db.ts  debugLog.ts  demoPage.ts  digest.ts  emoji.ts  fetchPage.ts  frecencyDb.ts  globalCapture.ts  iconSets.tsx  inbox.ts  indexer.ts  keymap.ts  linkTitle.ts  markdownExport.ts  menuEvents.ts  orgDb.ts  (+15 more)
(+10 files in other folders)
